--- a/src/app/styles/home.css
+++ b/src/app/styles/home.css
@@ -1,104 +1,45 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-}
-
-header {
-    background-color: darkolivegreen;
-    padding: 20px;
-    color: white;
-}
-
-h2 {
-    margin: 0;
-}
-
-.countdown-container {
+.section {
+    width: 100%;
+    padding: 50px 20px;
+    min-height: 100vh; /* Cada seção ocupa a altura total da tela */
     display: flex;
     justify-content: center;
-    gap: 20px;
-    margin-top: 20px;
+    align-items: center;
+    text-align: center;
+    background-color: #f9f9f9; /* Fundo claro para contraste */
 }
 
-.countdown-box {
-    background-color: white;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(212, 209, 209, 0.1);
-}
-
-.countdown-number {
+.section h2 {
     font-size: 2rem;
     color: darkolivegreen;
 }
 
-.countdown-label {
-    font-size: 0.9rem;
-    color: #556B2F;
-}
-
 .buttons-container {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    padding: 20px;
+    margin-top: 30px;
 }
 
 .button {
+    padding: 15px 30px;
     background-color: darkolivegreen;
     color: white;
     border: none;
-    padding: 15px 30px;
     border-radius: 8px;
-    font-size: 1rem;
+    font-size: 1.2rem;
     cursor: pointer;
-    display: flex;
-    align-items: center;
-    gap: 10px;
+    transition: background-color 0.3s ease;
 }
 
 .button:hover {
-    background-color: #455d27;
-}
-
-.section {
-    display: block !important;
-    padding: 20px;
-    background-color: #f0f0f0;
-}
-
-.section h3 {
-    margin-top: 0;
-}
-
-.modal-button {
-    background-color: darkolivegreen;
-    color: white;
-    padding: 10px 20px;
-    margin: 10px;
-    display: inline-block;
-    border-radius: 8px;
-    text-decoration: none;
-}
-
-.modal-button:hover {
-    background-color: #455d27;
-}
-
-.hidden {
-    display: none;
+    background-color: #556B2F;
 }
 
 @media (max-width: 600px) {
-    .buttons-container {
-        flex-direction: column;
-        gap: 10px;
+    .section {
+        padding: 20px;
     }
 
     .button {
-        width: 100%;
+        padding: 10px 20px;
+        font-size: 1rem;
     }
 }
