--- a/src/app/styles/home.css
+++ b/src/app/styles/home.css
@@ -15,7 +15,7 @@ body {
 h2 {
     font-size: 2rem;
     margin-bottom: 30px;
-    color: #2c3e50;
+    color: #3d5226;
     text-align: center;
 }
 
@@ -48,12 +48,13 @@ h2 {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
     min-width: 100px;
+    border: 1px solid #556B2F; /* Borda verde oliva */
 }
 
 .countdown-number {
     font-size: 2.5rem;
     font-weight: bold;
-    color: #2c3e50;
+    color: #3d5226; /* Verde oliva */
 }
 
 .countdown-label {
@@ -64,17 +65,16 @@ h2 {
 /* Botões minimalistas */
 .buttons-container {
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
     gap: 15px;
     margin-top: 30px;
     width: 100%;
+    max-width: 900px; /* Limite máximo para o alinhamento dos botões */
 }
 
 .button {
     padding: 15px 30px;
-    background-color: #3498db;
+    background-color: #556B2F; /* Verde oliva */
     color: white;
     border: none;
     border-radius: 8px;
@@ -82,13 +82,13 @@ h2 {
     cursor: pointer;
     transition: background-color 0.3s ease;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    width: 80%;
-    max-width: 400px;
     text-align: center;
+    flex: 1; /* Botões ocupam espaço igual */
+    max-width: 200px; /* Limite de largura */
 }
 
 .button:hover {
-    background-color: #2980b9;
+    background-color: #3d5226; /* Verde oliva escuro no hover */
 }
 
 .button i {
@@ -114,8 +114,13 @@ h2 {
         font-size: 0.9rem;
     }
 
+    .buttons-container {
+        flex-direction: column; /* Colocar os botões em coluna no mobile */
+    }
+
     .button {
         font-size: 1rem;
         padding: 12px 20px;
+        max-width: none; /* Remover o limite de largura para mobile */
     }
 }
