--- a/src/app/confirm.html
+++ b/src/app/confirm.html
@@ -36,6 +36,7 @@
     </div>
     
     <div id="toast" class="toast">Confirmação enviada com sucesso!</div>
+    <script src="../scripts/confirm.js"></script>
 </body>
 
 </html>
