--- a/src/app/home.html
+++ b/src/app/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casamento - Filipe e [Nome da Noiva]</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="../style/home.css" href="styles.css">
 </head>
 <body>
     <!-- Seção de Confirmação -->
@@ -47,6 +47,6 @@
         <button type="button" onclick="enviarRecado()">Enviar Recado</button>
     </section>
 
-    <script src="script.js"></script>
+    <script src="../scripts/home.js"></script>
 </body>
 </html>
